--- a/style3.css
+++ b/style3.css
@@ -1,40 +1,13 @@
-.kuning{
-    background-color: yellow;
-    height: 100px;
-    width: 170px;
+body{
+    margin: 10vh 10vw;
 }
-.oren{
-    background-color: orange;
-    height: 100px;
-    width: 1027px;
+
+img{
+    height: 20vh;
+    margin: 5px;
 }
-.containeratas{
+
+.atas,
+.bawah{
     display: flex;
-    justify-content: space-between;
-    margin-bottom: 10px;
-}
-.kotak1{
-    background-color: yellowgreen;
-    height: 450px;
-    width: 170px;
-}
-.kotak2{
-    background-color: lightgray;
-    height: 450px;
-    width: 840px;
-}
-.kotak3{
-    background-color: aqua;
-    height: 450px;
-    width: 170px;
-}
-.containertengah{
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 10px;
-}
-.containerbawah{
-    background-color: blue;
-    height: 50px;
-    width: 1217px;
 }
